# dcr-streamlit-ui-share

./: .gitignore  README.md  dcr_ui.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
cli/: __init__.py  __main__py.py  deploy.py
